--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "full ecommerce site using mern",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
+    "start": "SET node backend/server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon backend/server",
     "seeder": "node backend/utils/seeder.js",
